modul 11 add files

--- a/html-css/module_11/src/index.html
+++ b/html-css/module_11/src/index.html
@@ -1,14 +1,293 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Placeholder title</title>
+    <title>Модуль 11</title>
     <link rel="stylesheet" href="css/styles.min.css" />
-  </head>
+</head>
+<body>
+    <header class="main_head">
+        <div class="head_block container">
+            <h1 class="logo">
+                <a href="#" class="logo__link">MoGo</a>
+            </h1>
+            <nav class="nav_menu">
+                <ul class="link_list">
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link nav_link--hover">about</a>
+                    </li>
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link nav_link--hover">service</a>
+                        </li>
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link nav_link--hover">work</a>
+                    </li>
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link nav_link--hover">blog</a>
+                    </li>
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link nav_link--hover">contact</a>
+                    </li>
+                </ul>
+                <ul class="sl_list">
+                    <li class="sl_list__item">
+                        <a href="#" class="i_link"> 
+                            <svg height="512pt" viewbox="0 -31 512 512" xmlns="http://www.w3.org/2000/svg" class="i_link__icon i_link__icon--hover">
+                                <path d="M164.96 300.004h.024c.02 0 .04-.004.059-.004H437a15.003 
+                                15.003 0 0 0 14.422-10.879l60-210a15.003 15.003 0 0 0-2.445-13.152A15.006 
+                                15.006 0 0 0 497 60H130.367l-10.722-48.254A15.003 15.003 0 0 0 105 
+                                0H15C6.715 0 0 6.715 0 15s6.715 15 15 15h77.969c1.898 8.55 51.312 
+                                230.918 54.156 243.71C131.184 280.64 120 296.536 120 315c0 24.812 
+                                20.188 45 45 45h272c8.285 0 15-6.715 15-15s-6.715-15-15-15H165c-8.27 
+                                0-15-6.73-15-15 0-8.258 6.707-14.977 14.96-14.996zM477.114 90l-51.43 
+                                180H177.032l-40-180zm0 0M150 405c0 24.813 20.188 45 45 45s45-20.188 
+                                45-45-20.188-45-45-45-45 20.188-45 45zm45-15c8.27 0 15 6.73 15 15s-6.73 
+                                15-15 15-15-6.73-15-15 6.73-15 15-15zm0 0M362 405c0 24.813 20.188 45 45 
+                                45s45-20.188 45-45-20.188-45-45-45-45 20.188-45 45zm45-15c8.27 0 15 6.73 
+                                15 15s-6.73 15-15 15-15-6.73-15-15 6.73-15 15-15zm0 0"/>
+                            </svg>
+                        </a>   
+                    </li>
+                    <li class="sl_list__item">
+                        <a href="#" class="i_link"> 
+                            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 56.966 56.966" class="i_link__icon i_link__icon--hover">
+                                <path d="M55.146 51.887L41.588 37.786A22.926 22.926 0 0 0 46.984 
+                                23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 
+                                0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 
+                                0 1.518-.297 2.079-.837a3.004 3.004 0 0 0 .083-4.242zM23.984 6c9.374 0 
+                                17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z"/>
+                            </svg>
+                        </a>    
+                    </li >
+                </ul>
+            </nav>
+        </div>
 
-  <body>
-    <script src="js/scripts.min.js"></script>
-  </body>
+        <div class="headline headline--change_color container">
+            <h3 class="headline__first headline__first--resize">Creative Template</h3>
+            <h2 class="headline__second headline__second--resize">Welcome<br>to mogo</h2>
+            <input type="button" value="Learn more" class="headline__button">
+        </div>
+    </header>
+    <main>
+        <section class="container">
+            <div class="headline">
+                <h3 class="headline__first">We work with</h3>
+                <h2 class="headline__second headline__second--after">Amazing Services</h2>
+            </div>
+            <ul class="card_list">
+                <li class="card_list__item_wrap">
+                    <article class="card_item">
+                        <div class="card_container card_container--before icon-1">
+                            <h4 class="card_container__title">photograhy</h4>
+                            <p class="card_container__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li class="card_list__item_wrap">
+                    <article class="card_item">
+                        <div class="card_container card_container--before icon-2">
+                            <h4 class="card_container__title">web disign</h4>
+                            <p class="card_container__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li class="card_list__item_wrap">
+                    <article class="card_item">
+                        <div class="card_container card_container--before icon-3">
+                            <h4 class="card_container__title">creativity</h4>
+                            <p class="card_container__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li class="card_list__item_wrap">
+                    <article class="card_item">
+                        <div class="card_container card_container--before icon-4">
+                            <h4 class="card_container__title">seo</h4>
+                            <p class="card_container__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li class="card_list__item_wrap">
+                    <article class="card_item">
+                        <div class="card_container card_container--before icon-5">
+                            <h4 class="card_container__title">css/html</h4>
+                            <p class="card_container__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li class="card_list__item_wrap">
+                    <article class="card_item">
+                        <div class="card_container card_container--before icon-6">
+                            <h4 class="card_container__title">digital</h4>
+                            <p class="card_container__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+            </ul>
+        </section>
+        <section class="container">
+            <div class="headline">
+                <h3 class="headline__first">Who we are</h3>
+                <h2 class="headline__second headline__second--after">Meet our team</h2>
+                <p class="headline__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Ea rerum accusantium eius? Fugiat aspernatur veniam molestiae magni magnam,
+                ratione pariatur?</p>
+            </div>
+            <ul class="team_list">
+                <li>
+                    <article class="team_items">
+                        <div class="team_modal">
+                            <ul class="team_m_list">
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#facebook"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#pinterest"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img
+                            src="./images/team/1-small.jpg"
+                            alt=""
+                            class="team_items__img"
+                            srcset="./images/team/1-small.jpg 1x,
+                                    ./images/team/1-large.jpg 2x"/>
+                        <h4 class="team_items__name">Matthew dix</h4>
+                        <p class="team_items__profession">Grafic Design</p>
+                    </article>
+                </li>
+                <li>
+                    <article class="team_items">
+                        <div class="team_modal">
+                            <ul class="team_m_list">
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#facebook"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#pinterest"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img
+                            src="../src/images/team/2-small.jpg"
+                            alt=""
+                            class="team_items__img"
+                            srcset="./images/team/2-small.jpg 1x,
+                                    ./images/team/2-large.jpg 2x"/>
+                        <h4 class="team_items__name">Christopher Campbell</h4>
+                        <p class="team_items__profession">Branding/UX design</p>
+                    </article>
+                </li>
+                <li>
+                    <article class="team_items">
+                        <div class="team_modal">
+                            <ul class="team_m_list">
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#facebook"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#pinterest"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprites.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                         <img
+                            src="./images/team/3-small.jpg"
+                            alt=""
+                            class="team_items__img"
+                            srcset="./images/team/3-small.jpg 1x,
+                                    ./images/team/3-large.jpg 2x"/>
+                        <h4 class="team_items__name">Michael Fertig</h4>
+                        <p class="team_items__profession">Developer</p>
+                    </article>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <div class="footer container">
+            <p class="footer__text">© 2016 MoGo free PSD template by 
+                <a class="text__link" href="#" target="_blank">Laaqiq</a>
+            </p>
+            <div class="subscripe_menu">      
+                <input type="email" placeholder="Your Email..." class="subscripe_menu__email">
+                <input type="submit" value="Subscribe" class="subscripe_menu__submit">
+            </div>
+        </div> 
+    </footer>
+</body>
 </html>
