module 11 global edits-3

--- a/html-css/module_11/src/index.html
+++ b/html-css/module_11/src/index.html
@@ -150,28 +150,28 @@
                                  <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
                                         <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#facebook"></use>
+                                            <use xlink:href="./images/icons/sprites.svg#facebook"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
                                         <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#twitter"></use>
+                                            <use xlink:href="./images/icons/sprites.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
                                         <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#pinterest"></use>
+                                            <use xlink:href="./images/icons/sprites.svg#pinterest"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
                                         <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#instagram"></use>
+                                            <use xlink:href="./images/icons/sprites.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
