module 11 add social icons

--- a/html-css/module_11/src/index.html
+++ b/html-css/module_11/src/index.html
@@ -192,34 +192,34 @@
                         <div class="team_modal">
                             <ul class="team_m_list">
                                 <li class="team_m_list__item">
-                                    <a href="#" class="item_link item_link--hover">
-                                        <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#facebook"></use>
-                                        </svg>
-                                    </a> 
-                                </li>
-                                <li class="team_m_list__item">
-                                    <a href="#" class="item_link item_link--hover">
-                                        <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#twitter"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team_m_list__item">
-                                    <a href="#" class="item_link item_link--hover">
-                                        <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#pinterest"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team_m_list__item">
-                                    <a href="#" class="item_link item_link--hover">
-                                        <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
+                                   <a href="#" class="item_link item_link--hover">
+                                       <svg class="social_icon">
+                                           <use xlink:href="./images/icons/sprites.svg#facebook"></use>
+                                       </svg>
+                                   </a> 
+                               </li>
+                               <li class="team_m_list__item">
+                                   <a href="#" class="item_link item_link--hover">
+                                       <svg class="social_icon">
+                                           <use xlink:href="./images/icons/sprites.svg#twitter"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="team_m_list__item">
+                                   <a href="#" class="item_link item_link--hover">
+                                       <svg class="social_icon">
+                                           <use xlink:href="./images/icons/sprites.svg#pinterest"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="team_m_list__item">
+                                   <a href="#" class="item_link item_link--hover">
+                                       <svg class="social_icon">
+                                           <use xlink:href="./images/icons/sprites.svg#instagram"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                           </ul>
                         </div>
                         <img
                             src="../src/images/team/2-small.jpg"
@@ -236,34 +236,34 @@
                         <div class="team_modal">
                             <ul class="team_m_list">
                                 <li class="team_m_list__item">
-                                    <a href="#" class="item_link item_link--hover">
-                                        <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#facebook"></use>
-                                        </svg>
-                                    </a> 
-                                </li>
-                                <li class="team_m_list__item">
-                                    <a href="#" class="item_link item_link--hover">
-                                        <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#twitter"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team_m_list__item">
-                                    <a href="#" class="item_link item_link--hover">
-                                        <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#pinterest"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="team_m_list__item">
-                                    <a href="#" class="item_link item_link--hover">
-                                        <svg class="social_icon">
-                                            <use xlink:href="./images/icon/sprites.svg#instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
+                                   <a href="#" class="item_link item_link--hover">
+                                       <svg class="social_icon">
+                                           <use xlink:href="./images/icons/sprites.svg#facebook"></use>
+                                       </svg>
+                                   </a> 
+                               </li>
+                               <li class="team_m_list__item">
+                                   <a href="#" class="item_link item_link--hover">
+                                       <svg class="social_icon">
+                                           <use xlink:href="./images/icons/sprites.svg#twitter"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="team_m_list__item">
+                                   <a href="#" class="item_link item_link--hover">
+                                       <svg class="social_icon">
+                                           <use xlink:href="./images/icons/sprites.svg#pinterest"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                               <li class="team_m_list__item">
+                                   <a href="#" class="item_link item_link--hover">
+                                       <svg class="social_icon">
+                                           <use xlink:href="./images/icons/sprites.svg#instagram"></use>
+                                       </svg>
+                                   </a>
+                               </li>
+                           </ul>
                         </div>
                          <img
                             src="./images/team/3-small.jpg"
