module 11 global edits 5

--- a/html-css/module_11/src/index.html
+++ b/html-css/module_11/src/index.html
@@ -68,7 +68,7 @@
         <div class="headline headline--change_color container">
             <h3 class="headline__first headline__first--resize">Creative Template</h3>
             <h2 class="headline__second headline__second--resize">Welcome<br>to mogo</h2>
-            <input type="button" value="Learn more" class="headline__button">
+            <input type="button" value="Learn more" class="headline-btn">
         </div>
     </header>
     <main>
@@ -285,7 +285,7 @@
             </p>
             <div class="subscripe_menu">      
                 <input type="email" placeholder="Your Email..." class="subscripe_menu__email">
-                <input type="submit" value="Subscribe" class="subscripe_menu__submit">
+                <input type="submit" value="Subscribe" class="submit-btn">
             </div>
         </div> 
     </footer>
