modul 11 add sprites

--- a/html-css/module_11/src/index.html
+++ b/html-css/module_11/src/index.html
@@ -100,7 +100,7 @@
                     <article class="card_item">
                         <div class="card_container card_container--before icon-3">
                             <h4 class="card_container__title">creativity</h4>
-                            <p class="card_container__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            <p class="card_container__text">.Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                                 Quod quia perferendis voluptatem!</p>
                         </div>
                     </article>
