module 11 add icon in new folder

--- a/html-css/module_11/src/index.html
+++ b/html-css/module_11/src/index.html
@@ -150,28 +150,28 @@
                                  <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
                                         <svg class="social_icon">
-                                            <use xlink:href="./images/icons/sprites.svg#facebook"></use>
+                                            <use xlink:href="./images/icon/sprite.svg#facebook"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
                                         <svg class="social_icon">
-                                            <use xlink:href="./images/icons/sprites.svg#twitter"></use>
+                                            <use xlink:href="./images/icon/sprite.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
                                         <svg class="social_icon">
-                                            <use xlink:href="./images/icons/sprites.svg#pinterest"></use>
+                                            <use xlink:href="./images/icon/sprite.svg#pinterest"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
                                         <svg class="social_icon">
-                                            <use xlink:href="./images/icons/sprites.svg#instagram"></use>
+                                            <use xlink:href="./images/icon/sprite.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -191,35 +191,35 @@
                     <article class="team_items">
                         <div class="team_modal">
                             <ul class="team_m_list">
+                                 <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
                                 <li class="team_m_list__item">
-                                   <a href="#" class="item_link item_link--hover">
-                                       <svg class="social_icon">
-                                           <use xlink:href="./images/icons/sprites.svg#facebook"></use>
-                                       </svg>
-                                   </a> 
-                               </li>
-                               <li class="team_m_list__item">
-                                   <a href="#" class="item_link item_link--hover">
-                                       <svg class="social_icon">
-                                           <use xlink:href="./images/icons/sprites.svg#twitter"></use>
-                                       </svg>
-                                   </a>
-                               </li>
-                               <li class="team_m_list__item">
-                                   <a href="#" class="item_link item_link--hover">
-                                       <svg class="social_icon">
-                                           <use xlink:href="./images/icons/sprites.svg#pinterest"></use>
-                                       </svg>
-                                   </a>
-                               </li>
-                               <li class="team_m_list__item">
-                                   <a href="#" class="item_link item_link--hover">
-                                       <svg class="social_icon">
-                                           <use xlink:href="./images/icons/sprites.svg#instagram"></use>
-                                       </svg>
-                                   </a>
-                               </li>
-                           </ul>
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprite.svg#pinterest"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprite.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                         <img
                             src="../src/images/team/2-small.jpg"
@@ -235,37 +235,37 @@
                     <article class="team_items">
                         <div class="team_modal">
                             <ul class="team_m_list">
+                                 <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprite.svg#facebook"></use>
+                                        </svg>
+                                    </a> 
+                                </li>
                                 <li class="team_m_list__item">
-                                   <a href="#" class="item_link item_link--hover">
-                                       <svg class="social_icon">
-                                           <use xlink:href="./images/icons/sprites.svg#facebook"></use>
-                                       </svg>
-                                   </a> 
-                               </li>
-                               <li class="team_m_list__item">
-                                   <a href="#" class="item_link item_link--hover">
-                                       <svg class="social_icon">
-                                           <use xlink:href="./images/icons/sprites.svg#twitter"></use>
-                                       </svg>
-                                   </a>
-                               </li>
-                               <li class="team_m_list__item">
-                                   <a href="#" class="item_link item_link--hover">
-                                       <svg class="social_icon">
-                                           <use xlink:href="./images/icons/sprites.svg#pinterest"></use>
-                                       </svg>
-                                   </a>
-                               </li>
-                               <li class="team_m_list__item">
-                                   <a href="#" class="item_link item_link--hover">
-                                       <svg class="social_icon">
-                                           <use xlink:href="./images/icons/sprites.svg#instagram"></use>
-                                       </svg>
-                                   </a>
-                               </li>
-                           </ul>
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprite.svg#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprite.svg#pinterest"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team_m_list__item">
+                                    <a href="#" class="item_link item_link--hover">
+                                        <svg class="social_icon">
+                                            <use xlink:href="./images/icon/sprite.svg#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
-                         <img
+                        <img
                             src="./images/team/3-small.jpg"
                             alt=""
                             class="team_items__img"
