hw2 global commit

--- a/javascript/goit-js-hw-02/index.html
+++ b/javascript/goit-js-hw-02/index.html
@@ -12,6 +12,7 @@
         import {task4} from './js/task-4.js';
         import {task5} from './js/task-5.js';
         import {task6} from './js/task-6.js';
+        import {task7} from './js/task-7.js';
 
         t1.onclick = task1;   
         t2.onclick = task2;
@@ -19,6 +20,7 @@
         t4.onclick = task4;
         t5.onclick = task5;
         t6.onclick = task6;
+        t7.onclick = task7;
     </script>
     <style type="text/css">
         .container {
